--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -15,6 +15,8 @@ azure-core==1.29.4
 langchain==0.1.0
 langchain-openai==0.0.5
 langchain-community==0.0.13
+langgraph==0.0.15
+langchainhub==0.1.13
 
 # OpenAI
 openai==1.2.3
